fix section distortion

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -297,7 +297,7 @@ img {
 .distortion-container {
   position: relative;
 
-  height: 815px;
+  height: 820px;
 
   text-align: center;
 }
